<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iWealth</string>
    <string name="app_name1">定期定額</string>
    <string name="app_Mname">iWealth</string>
    <string name="action_settings">Settings</string>
    <string name="presentValue">期初投入金額(元)</string>
    <string name="futureValue">期末淨值(元)</string>
    <string name="n">累計週期(年)</string>
    <string name="annualizedReturn">年化報酬率(%)</string>
    <string name="cumulativeReturn">累積報酬率(%)</string>
    <string name="radioEvent">onRadioButtonClicked</string>
    <string name="radioEvent1">onRadioButtonClicked1</string>
    <string name="calc">試算</string>
    <string name="clean">清除</string>
    <string name="frequency">每年複利次數</string>
    <string name="each_period">每期投入金額</string>
    <string name="during_preiod">投資期間</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    
    <string name="action_refresh">重新整理</string>
    <string name="action_edit">編輯</string>
    <string name="action_search">搜尋</string>
    <string name="action_info">軟體資訊</string>
    
    <string name="insert_note">新增</string>
    

    <string name="StcokNumber">股票代號</string>
    <string name="stockNum">股票代號</string>
    <string name="date">日期</string>
    <string name="price">成交</string>
    <string name="change">漲跌</string>
    <string name="StcokQuery">查詢</string>
    <string name="_rename">重新命名</string>
    <string name="_delete">刪除</string>
    <string name="_confirm">確定</string>
    <string name="_cancel">取消</string>
    <string name="_error_Msg">查無此股票代號</string>
    <string name="_error_Msg1">請檢查網路狀態或YAHOO Api 暫停服務</string>
    <string name="_Msg">請選擇儲存之筆記</string>
    
    

</resources>